--- a/css/style.css
+++ b/css/style.css
@@ -289,6 +289,7 @@ a:link, a:visited, a:hover, a:active {
   opacity: 0.8;
 }
 
+/* ひし形ランキング表示
 .ranking .image {
   width: 55px;
   height: 55px;
@@ -319,6 +320,17 @@ a:link, a:visited, a:hover, a:active {
   transform: rotate(45deg);
 }
 
+.ranking .order::before{
+  content: counter(ranking);
+  counter-increment: ranking;
+  content: '1';
+  display: inline-block;
+  font-size: 1.0rem;
+  -webkit-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+
 .ranking .ranking-item:nth-of-type(1) .order,
 .ranking .ranking-item:nth-of-type(2) .order,
 .ranking .ranking-item:nth-of-type(3) .order {
@@ -326,6 +338,54 @@ a:link, a:visited, a:hover, a:active {
   color: #fff;
   font-weight: normal;
   line-height: 18px;
+}
+*/
+
+/* 丸形ランキング表示 */
+
+.ranking .ranking-item {
+  position: relative;
+}
+
+.ranking .order {
+  position: absolute;
+  top: -9px;
+  left: 44px;
+  width:20px;
+  height: 20px;
+  border: 1px solid #ccc;
+  border-radius: 50%;
+  background-color: #fff;
+  color: #aaa;
+  text-align: center;
+  font-weight: bold;
+  line-height: 18px;
+}
+
+.ranking .order::before {
+  content: counter(ranking);
+  counter-increment: ranking;
+  font-size: 1.0rem;
+}
+
+.ranking .ranking-item:nth-of-type(1) .order,
+.ranking .ranking-item:nth-of-type(2) .order,
+.ranking .ranking-item:nth-of-type(3) .order {
+
+  line-height: 20px;
+}
+
+.ranking .image {
+  margin-right: 20px;
+}
+
+.ranking .text {
+  display: inline-block;
+  color: #000;
+  vertical-align:top;
+  font-size: 1.2rem;
+  line-height: 1.5;
+  width: 200px;
 }
 
 .ranking .ranking-item:nth-of-type(1) .order {
@@ -340,16 +400,6 @@ a:link, a:visited, a:hover, a:active {
   background-color: #a0541a;
 }
 
-.ranking .order::before{
-  content: counter(ranking);
-  counter-increment: ranking;
-  content: '1';
-  display: inline-block;
-  font-size: 1.0rem;
-  -webkit-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-}
 
 .documents {
   margin: 10px 10px 30px;
